package interfaces;

public interface AbleToAsk {
    void ask(Askable askable);
}
