package interfaces;

public interface AbleToSee {
    String see(String direction, String mood);

}
