package interfaces;

public interface Askable {
    void ask(String question);
}
