package interfaces;

public interface Checkable {
    void check();
}
