package interfaces;

public interface Fallable {
    void fall();
}
