package interfaces;

public interface Grabable {
    void grab();
}
