package interfaces;

public interface Hearable {
    String hear(String sound);
}
