package interfaces;

public interface Playable {
    String play();
}
