package interfaces;

public interface Sayable {
    String say(String name, String action);
}
