package place;

public enum WeatherType {
    SUNNY,WINDY,RAINY,FOGGY,SNOWY
}
