package plant;

public enum Density {
    LOW, MEDIUM, HIGH
}
